fixed: competences page overflow

--- a/styles/competences.css
+++ b/styles/competences.css
@@ -20,23 +20,59 @@
 	}
 }
 
-.competences-container {
-  display: grid;
-  height: 100%;
-  width: 100%;
-  grid-template-rows: 50% 50%;
-  grid-template-areas:
-    'skills'
-    'description';
+@keyframes entrance {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
-.competences-icons-container {
-  grid-area: skills;
-  position: relative;
+.competences-container {
+  display: grid;
+  height: 1fr;
+  width: 80%;
+  grid-template-columns: 1fr, 1fr;
+  grid-template-rows: 1fr, 1fr, 1fr, 1fr, 1fr;
+  grid-template-areas:
+    'skills-back text-back'
+    'skills-bdd text-bdd'
+    'skills-algo text-algo'
+    'skills-front text-front'
+    'skills-tools text-tools';
+  justify-items: center;
+}
+
+.competences-icons-containers {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  border-style: solid;
+  border-radius: 10px;
+  background-color: lightgrey;
+}
+
+.competences-icons-back {
+  grid-area: skills-back;
+}
+
+.competences-icons-bdd {
+  grid-area: skills-bdd
+}
+
+.competences-icons-algo {
+  grid-area: skills-algo
+}
+
+.competences-icons-front {
+  grid-area: skills-front
+}
+
+.competences-icons-tools {
+  grid-area: skills-tools
 }
 
 .competences-img {
@@ -48,11 +84,33 @@
   animation-play-state: running;
 }
 
-.competences-description-container {
-  grid-area: description;
+.competences-description-containers {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
+  text-align: center;
   justify-content: center;
+  border-style: solid;
+  border-radius: 10px;
+}
+
+.competences-description-back {
+  grid-area: text-back;
+}
+
+.competences-description-bdd {
+  grid-area: text-bdd;
+}
+
+.competences-description-algo {
+  grid-area: text-algo;
+}
+
+.competences-description-front {
+  grid-area: text-front;
+}
+
+.competences-description-tools {
+  grid-area: text-tools;
 }
 
 .competences-description {
@@ -61,14 +119,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: white;
+  color: black;
 }
 
 .competences-description p {
   animation: entrance 1s ease 0s 1 normal forwards;
 }
 
-.background-rect-competences {
+/* .background-rect-competences {
   position: fixed;
   right: 0;
   left: 0;
@@ -77,73 +135,77 @@
   isolation: isolate;
   z-index: 1;
   background-color: black;
-  animation: slideUp 1s ease 0s 1 normal forwards;
-}
+  animation: entrance 1s ease 0s 1 normal forwards;
+} */
 
 /* Parameters for phones */
 @media only screen and (max-width: 600px) {
-  .competences-icons-container {
+  /* .competences-icons-containers {
     height: 70%;
     gap: 4vh;
     padding: 8vh;
     row-gap: 1vh;
-  }
+  } */
   .competences-img {
     height: auto;
-    max-width: 12vw;
+    max-width: 8vw;
   }
-  .background-rect-competences {
+  /* .background-rect-competences {
     top: 41vh;
     height: 90px;
     position: absolute;
-  }
+  } */
   .competences-description {
-    top: 15px;
+    /* top: 15px; */
     font-size: large;
   }
 }
 
 /* Parameters for medium devices */
 @media only screen and (min-width: 600px) {
-  .competences-icons-container {
-    height: 70%;
+  .competences-icons-containers {
+    height: 100%;
     top: 20%;
-    padding: 20px 160px;
+    /* padding: 20px; */
     gap: 20px;
   }
   .competences-img {
     height: 40px;
     width: 40px;
   }
-  .background-rect-competences {
+  /* .background-rect-competences {
     top: 55%;
     height: 90px;
-  }
+  } */
   .competences-description {
-    top: 15px;
+    /* top: 15px; */
     font-size: large;
   }
 }
 
 /* Parameters for big laptops */
 @media only screen and (min-width: 992px) {
-  .competences-icons-container {
-    height: 70%;
-    padding: 20px 160px;
+  .competences-container {
+    row-gap: 20px;
+    column-gap: 10px;
+  }
+
+  .competences-icons-containers {
+    width: 70%;
+    padding: 0px;
     gap: 30px;
     top: 0px;
   }
   .competences-img {
-    height: 60px;
-    width: 60px;
+    height: 50px;
+    width: 50px;
   }
-  .background-rect-competences {
+  /* .background-rect-competences {
     top: 60%;
     height: 120px;
-  }
-  .competences-description {
-    height: 60%;
-    top: 15px;
-    font-size: xx-large;
+  } */
+  .competences-description-containers {
+    width: 80%;
+    font-size: x-large;
   }
 }
